@@ -9,7 +9,8 @@
     op <- options()
     op.oce <- list(oce.tz = "UTC",
                    oce.mgp = c(2,3/4,0),
-                   oce.draw.time.range = TRUE)
+                   oce.draw.time.range = TRUE,
+                   oce.debug = 0)
     toset <- !(names(op.oce) %in% names(op))
     if(any(toset)) options(op.oce[toset])
 }
